--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.4.1"
 
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
+
+    //Calendar
+    implementation 'io.github.boguszpawlowski.composecalendar:composecalendar:0.5.1'
+    implementation 'io.github.boguszpawlowski.composecalendar:kotlinx-datetime:0.5.1'
 }
