--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
@@ -60,6 +60,8 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     implementation 'com.android.databinding:library:7.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -73,7 +75,8 @@ dependencies {
     implementation "androidx.camera:camera-view:1.0.0-alpha29"
 
     //Barcode
-    implementation 'com.google.mlkit:barcode-scanning:17.0.0'
+    implementation 'com.google.mlkit:barcode-scanning:17.0.2'
+    implementation 'com.google.guava:guava:29.0-android'
 
     //Camera Permission
     implementation "com.google.accompanist:accompanist-permissions:0.19.0"
@@ -92,20 +95,26 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.0.0-rc03"
 
     //Database
-    implementation "androidx.room:room-runtime:2.4.0"
-    implementation 'androidx.room:room-ktx:2.4.0'
-    implementation "androidx.compose.runtime:runtime-livedata:1.0.5"
-    annotationProcessor "androidx.room:room-compiler:2.4.0"
-    kapt "androidx.room:room-compiler:2.4.0"
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation 'androidx.room:room-ktx:2.4.2'
+    implementation "androidx.compose.runtime:runtime-livedata:1.1.1"
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
 
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-process:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-compiler:2.4.1"
 
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
 
     //Calendar
-    implementation 'io.github.boguszpawlowski.composecalendar:composecalendar:0.5.1'
-    implementation 'io.github.boguszpawlowski.composecalendar:kotlinx-datetime:0.5.1'
+    implementation 'io.github.vanpra.compose-material-dialogs:datetime:0.8.0-beta'
+
+    //Koin
+    implementation("io.insert-koin:koin-core:3.2.0-beta-1")
+    testImplementation("io.insert-koin:koin-test:3.2.0-beta-1")
+    implementation "io.insert-koin:koin-androidx-compose:3.2.0-beta-1"
+    implementation "io.insert-koin:koin-android:3.2.0-beta-1"
 }
