--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     implementation 'com.google.mlkit:barcode-scanning:17.0.2'
     implementation 'com.google.guava:guava:29.0-android'
 
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
     //Camera Permission
     implementation "com.google.accompanist:accompanist-permissions:0.19.0"
 
